--- a/CuantoCuesta/CuantoCuesta/app/src/main/res/values/themes.xml
+++ b/CuantoCuesta/CuantoCuesta/app/src/main/res/values/themes.xml
@@ -1,36 +1,14 @@
 <resources>
-    <!-- Base application theme. -->
-    <!--    <style name="Theme.CuantoCuesta" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
 
-
-    <!--    <resources xmlns:tools="http://schemas.android.com/tools">-->
-    <!-- Base application theme. -->
-    <!--   <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
-    <style name="Theme.CuantoCuesta" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
-
-
-        <!--    <style name="Theme.CuantoCuesta" parent="@style/Theme.MaterialComponents.Light.NoActionBar">-->
-        <!--        &lt;!&ndash; Primary brand color. &ndash;&gt;-->
-        <!--        <item name="colorPrimary">@color/purple_200</item>-->
-        <!--        <item name="colorPrimaryVariant">@android:color/holo_red_dark</item>-->
-        <!--        <item name="colorOnPrimary">@color/black</item>-->
-        <!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
-        <!--        <item name="colorSecondary">@color/teal_200</item>-->
-        <!--        <item name="colorSecondaryVariant">@color/teal_200</item>-->
-        <!--        <item name="colorOnSecondary">@color/black</item>-->
-        <!--        &lt;!&ndash; Status bar color. &ndash;&gt;-->
-        <!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
-        <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-
-
-        <!--    <style name="CuantoCuesta" parent="@style/Theme.MaterialComponents.Light.NoActionBar">-->
-        <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+    <style name="Theme.CuantoCuesta" parent="@style/Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-        <!--    </style>-->
 
     </style>
+
+
+
 
 
 </resources>
