--- a/CuantoCuesta/CuantoCuesta/app/src/main/res/layout/item_calculo.xml
+++ b/CuantoCuesta/CuantoCuesta/app/src/main/res/layout/item_calculo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="25000px"
     android:background="#80D8FF"
@@ -227,7 +228,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tiMetro2"
+                        android:id="@+id/tiPorcentaje"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number" />
@@ -251,8 +252,6 @@
                 android:id="@+id/tvPrecioPorUnidadTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:paddingRight="5dp"
                 android:shadowColor="#000"
                 android:shadowDx="5"
@@ -287,8 +286,6 @@
                 android:id="@+id/tvPrecioPorProductoTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
                 android:paddingRight="5dp"
                 android:shadowColor="#000"
