--- a/CuantoCuesta/CuantoCuesta/app/src/main/res/layout/item_calculo.xml
+++ b/CuantoCuesta/CuantoCuesta/app/src/main/res/layout/item_calculo.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/tiPrecio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number" />
+                android:inputType="numberDecimal" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
