--- a/CuantoCuesta/CuantoCuesta/app/src/main/res/menu/action_bar_menu.xml
+++ b/CuantoCuesta/CuantoCuesta/app/src/main/res/menu/action_bar_menu.xml
@@ -3,4 +3,7 @@
     <item
         android:id="@+id/item_agregar"
         android:title="Agregar item" />
+    <item
+        android:id="@+id/item_limpiar"
+        android:title="Limpiar todo" />
 </menu>
