--- a/CuantoCuesta/CuantoCuesta/app/src/main/res/layout/fragment_calculo.xml
+++ b/CuantoCuesta/CuantoCuesta/app/src/main/res/layout/fragment_calculo.xml
@@ -5,9 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.CalculoFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--    <androidx.recyclerview.widget.RecyclerView-->
+    <!--        android:id="@+id/rvListadoCalculos"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>-->
+
+
+    <ListView
         android:id="@+id/rvListadoCalculos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
-
+        android:layout_height="match_parent" />
 </FrameLayout>
