--- a/CuantoCuesta/CuantoCuesta/app/src/main/res/menu/action_bar_menu.xml
+++ b/CuantoCuesta/CuantoCuesta/app/src/main/res/menu/action_bar_menu.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/item_limpiar"
         android:title="Limpiar todo" />
+    <item
+        android:id="@+id/item_limpiar2"
+        android:title="Limpiar todo2" />
 </menu>
