allowWritesOnUiThread en true

--- a/SayTheWord/SayTheWord_v2/app/src/main/res/layout/fragment_juego_configuracion_inicial.xml
+++ b/SayTheWord/SayTheWord_v2/app/src/main/res/layout/fragment_juego_configuracion_inicial.xml
@@ -40,16 +40,15 @@
 
 					<RadioButton
 						android:id="@+id/rdVisualizacion"
-						android:layout_width="0dp"
+						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:layout_weight="1"
 						android:text="Visualización" />
+
 
 					<RadioButton
 						android:id="@+id/rbEscritura"
-						android:layout_width="0dp"
+						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:layout_weight="1"
 						android:text="Escritura" />
 				</RadioGroup>
 
